# pathlib

./: .gitignore  .travis.yml  Cargo.toml  azure-pipelines.yml  justfile  rustfmt.toml
benches/: compare_iter.rs  compare_stdpath.rs  compare_unix_win_iter.rs
src/: common.rs  lib.rs  path.rs  prelude.rs  test.rs  unix.rs  windows.rs
src/common/: error.rs  path_type.rs  string.rs
src/test/: common.rs  path.rs  unix.rs  windows.rs
src/test/common/: error.rs  path_type.rs
src/test/unix/: path.rs  unix.rs
src/test/unix/unix/: path.rs
src/test/windows/: common.rs  parser.rs  unix.rs  windows.rs
src/test/windows/unix/: path.rs
src/unix/: iter.rs  parser.rs  path.rs  path_type.rs  unix_iter.rs  windows_iter.rs
src/unix/iter/: manual.rs  parser.rs
src/windows/: iter.rs  match_prefix.rs  parser.rs  path.rs  path_type.rs  unix_iter.rs  windows_iter.rs
src/windows/iter/: manual.rs  parser.rs
tests/: memorypath.rs  platform.rs  simplepath.rs
tests/unix/: mod.rs  simplepath.rs
tests/windows/: mod.rs  simplepath.rs
