[package]
name = "pathlib"
version = "0.1.0"
authors = ["Ariel De Ocampo <arielmakestuff@gmail.com>"]
edition = "2018"

[features]
default = ["manual-iter"]
manual-iter = []

[dependencies]
lazy_static = "1.2.0"
derive_more = "0.14"

[dev-dependencies.proptest]
version = "0.9"
default-features = false
# Enable all default features not known to break code coverage builds
features = ["default-code-coverage"]
