[package]
name = "pathlib"
version = "0.1.0"
authors = ["Ariel De Ocampo <arielmakestuff@gmail.com>"]
edition = "2018"

[features]
default = ["manual-iter", "parser-iter"]
manual-iter = []
parser-iter = ["combine", "regex"]

[dependencies]
lazy_static = "1.2.0"
derive_more = "0.14"
regex = { version = "1.1.6", optional = true }

[dependencies.combine]
version = "3.8.1"
features = ["regex-1"]
optional = true

[dev-dependencies.proptest]
version = "0.9"
default-features = false
# Enable all default features not known to break code coverage builds
features = ["default-code-coverage"]
